🚀 Implementación completa de Zapier CLI Integrations
✨ Funcionalidades implementadas:
- 📊 Reputómetro Invisible: Cron job + scoring + Slack reports
- 🔥 Hot Leads Detection: HubSpot webhook + alertas Slack
- 🎁 Recompensas por Escasez: Google Sheets + cupones automáticos

🛠️ Stack: TypeScript + Zapier CLI + HubSpot + Slack + Google Sheets
🧪 Tests: Jest con mocks completos + exponential backoff + logging
📁 Estructura: src/zaps + tests/zaps + scripts + docs completa

🔧 Arreglos TypeScript: handlers + tipos + imports resueltos
✅ Estado: Production Ready - compilación sin errores

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,22 @@ GOOGLE_CLIENT_ID=your-google-oauth-client-id
 GOOGLE_CLIENT_SECRET=your-google-oauth-client-secret
 GOOGLE_REFRESH_TOKEN=your-google-oauth-refresh-token
 
+# Reputómetro Invisible Configuration
+REPUTOMETRO_ENABLED=true
+REPUTOMETRO_CRON_SCHEDULE=*/5 * * * *
+REPUTOMETRO_TIMEZONE=America/Mexico_City
+REPUTOMETRO_LOG_LEVEL=info
+
+# Hot Leads Configuration
+HOT_LEADS_ENABLED=true
+HOT_LEAD_THRESHOLD=40
+
+# Recompensas por Escasez Configuration
+RECOMPENSAS_ESCASEZ_ENABLED=true
+STOCK_THRESHOLD=20
+GOOGLE_SHEETS_API_KEY=your-google-sheets-api-key
+GOOGLE_SHEETS_ID=your-google-spreadsheet-id
+
 # Security
 JWT_SECRET=your-jwt-secret-here
 ENCRYPTION_KEY=your-encryption-key-here
