--- a/package.json
+++ b/package.json
@@ -33,6 +33,16 @@
     "release:major": "node scripts/releaseManager.js major",
     "workflow:cleanup": "npm run clean && npm install && npm run setup:env",
     "pre-release": "npm run workflow:cleanup && npm run qa:local",
+    "reputometro:test": "npm run build && node scripts/test-reputometro.js",
+    "reputometro:logs": "tail -f logs/reputometro.log",
+    "reputometro:validate": "npm run test -- tests/zaps/reputometro.test.ts",
+    "hot-leads:test": "npm run build && node scripts/test-hot-leads.js",
+    "hot-leads:logs": "tail -f logs/hot_leads.log",
+    "hot-leads:validate": "npm run test -- tests/zaps/hot-leads/hot-leads.test.ts",
+    "recompensas:test": "npm run build && node scripts/test-recompensas-escasez.js",
+    "recompensas:logs": "tail -f logs/recompensas.log",
+    "recompensas:validate": "npm run test -- tests/zaps/recompensas-escasez/recompensas-escasez.test.ts",
+    "zaps:test-all": "npm run hot-leads:validate && npm run recompensas:validate && npm run reputometro:validate",
     "start": "node dist/index.js",
     "bootstrap:all": "echo \"Bootstrap Phase 0: Setting up project structure...\" && npm install",
     "configure:extensions": "node scripts/configureExtensions.js",
@@ -108,6 +118,7 @@
     "@hubspot/api-client": "^12.0.0",
     "@slack/bolt": "^4.4.0",
     "@slack/web-api": "^7.9.3",
+    "@types/node-cron": "^3.0.11",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "axios": "^1.10.0",
@@ -115,6 +126,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "firebase-admin": "^12.0.0",
+    "node-cron": "^4.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "yaml": "^2.8.0",
