--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,15 @@ REPUTOMETRO_LOG_LEVEL=info
 HOT_LEADS_ENABLED=true
 HOT_LEAD_THRESHOLD=40
 
+# Dropout Positivo Configuration
+DROPOUT_POSITIVO_ENABLED=true
+DROPOUT_THRESHOLD_DAYS=7
+DROPOUT_SCORE_BOOST=30
+
+# Daily Report Configuration
+DAILY_REPORT_ENABLED=true
+DAILY_REPORT_TIMEZONE=Europe/Madrid
+
 # Recompensas por Escasez Configuration
 RECOMPENSAS_ESCASEZ_ENABLED=true
 STOCK_THRESHOLD=20
