--- a/package.json
+++ b/package.json
@@ -42,7 +42,13 @@
     "recompensas:test": "npm run build && node scripts/test-recompensas-escasez.js",
     "recompensas:logs": "tail -f logs/recompensas.log",
     "recompensas:validate": "npm run test -- tests/zaps/recompensas-escasez/recompensas-escasez.test.ts",
-    "zaps:test-all": "npm run hot-leads:validate && npm run recompensas:validate && npm run reputometro:validate",
+    "dropout:test": "npm run build && node scripts/test-dropout-positivo.js",
+    "dropout:logs": "tail -f logs/dropout.log",
+    "dropout:validate": "npm run test -- tests/zaps/dropout-positivo/dropout-positivo.test.ts",
+    "daily-report:generate": "npm run build && node -e \"require('./dist/scripts/dailyReport').runManualReport()\"",
+    "daily-report:start": "npm run build && node -e \"require('./dist/scripts/dailyReport').setupDailyReportCron()\"",
+    "daily-report:logs": "ls -la reports/ && echo '--- Último reporte ---' && cat reports/$(ls -t reports/*.md | head -1)",
+    "zaps:test-all": "npm run hot-leads:validate && npm run recompensas:validate && npm run reputometro:validate && npm run dropout:validate",
     "start": "node dist/index.js",
     "bootstrap:all": "echo \"Bootstrap Phase 0: Setting up project structure...\" && npm install",
     "configure:extensions": "node scripts/configureExtensions.js",
@@ -92,18 +98,24 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/eslint-parser": "^7.0.0",
+    "@types/chai": "5.2.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
+    "@types/mocha": "10.0.10",
+    "@types/nock": "10.0.3",
     "@types/node": "^20.0.0",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
+    "chai": "5.2.0",
     "eslint": "^8.0.0",
     "husky": "^9.1.7",
     "jest": "^29.0.0",
     "lint-staged": "^16.1.2",
     "markdownlint-cli": "^0.45.0",
+    "mocha": "11.7.1",
+    "nock": "14.0.5",
     "pre-commit": "^1.0.10",
     "prettier": "^3.0.0",
     "supertest": "^7.1.1",
