--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev:debug": "ts-node-dev --inspect --respawn --transpile-only src/index.ts",
     "build": "tsc && npm run copy-assets",
+    "build:production": "NODE_ENV=production tsc --build tsconfig.json && npm run copy-assets",
     "copy-assets": "cp -r config/ dist/ && cp .env.example dist/",
     "deploy": "npm run build && npm run deploy:vercel",
     "deploy:vercel": "vercel --prod",
     "lint": "eslint \"src/**/*.{js,ts}\" --fix",
     "lint:check": "eslint \"src/**/*.{js,ts}\"",
+    "lint:staged": "lint-staged",
+    "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -18,7 +22,8 @@
     "test:integration": "jest --testPathPattern=__tests__/integration",
     "test:e2e": "jest --testPathPattern=__tests__/e2e",
     "test:slack-report": "npm run test:coverage && node scripts/slackTestReport.js",
-    "test:ci": "npm run lint:check && npm run test:coverage",
+    "test:ci": "npm run lint:check && npm run type-check && npm run test:coverage",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "qa:local": "npm run test:ci && npm run build",
     "qa:staging": "NODE_ENV=staging npm run test:integration && npm run test:e2e",
     "qa:report": "node scripts/qaReport.js",
@@ -112,6 +117,7 @@
     "eslint": "^8.0.0",
     "husky": "^9.1.7",
     "jest": "^29.0.0",
+    "jest-junit": "16.0.0",
     "lint-staged": "^16.1.2",
     "markdownlint-cli": "^0.45.0",
     "mocha": "11.7.1",
