--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -25,14 +25,19 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          cache: 'npm'
+          cache: 'pnpm'
+
+      - name: 📦 Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
       - name: ⚡ Fast Build & Test
         run: |
-          npm ci --silent --production=false
+          pnpm install --frozen-lockfile --production=false
           # Solo test crítico, sin coverage
-          npm test --silent --bail --testTimeout=5000 || echo "Tests completed"
-          npm run build --silent
+          pnpm test --silent --bail --testTimeout=5000 || echo "Tests completed"
+          pnpm run build --silent
         env:
           NODE_ENV: production
 
@@ -40,7 +45,7 @@ jobs:
       - name: 📦 Deploy Zapier (Optional)
         if: secrets.ZAPIER_DEPLOY_KEY
         run: |
-          npm install -g zapier-platform-cli --silent
+          pnpm install -g zapier-platform-cli --silent
           zapier deploy --quiet
         env:
           ZAPIER_DEPLOY_KEY: ${{ secrets.ZAPIER_DEPLOY_KEY }}
