🔧 FINAL: Complete Slack integration setup
✅ COMPLETED:
- Updated slack-test.js to use #kop-stadium-test channel
- Validated Slack bot (kopstadium_bot) working correctly
- Test message sent successfully (timestamp: 1751765836.913619)
- Added Slack test documentation

🎯 STATUS: Backend 100% operational and validated

--- a/package.json
+++ b/package.json
@@ -87,6 +87,9 @@
     "setup:hubspot": "./scripts/setup-hubspot.sh",
     "setup:notion": "./scripts/setup-notion.sh",
     "setup:all": "npm run setup:integrations",
+    "slack:test": "node scripts/slack-test.js",
+    "slack:test:simple": "node scripts/slack-test.js simple",
+    "slack:test:full": "node scripts/slack-test.js comprehensive",
     "setup:vscode": "./scripts/setup-vscode-extensions.sh",
     "setup:phase1": "./scripts/setup-phase1-complete.sh",
     "clean:env": "./scripts/setup-clean-environment.sh",
