ngrok v3 actualizado y OAuth Slack completo

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "dev:debug": "ts-node-dev --inspect --respawn --transpile-only src/index.ts",
     "dev:slack": "ts-node-dev --respawn --transpile-only src/slack/dev-server.ts",
+    "dev:oauth": "ts-node-dev --respawn --transpile-only src/slack/oauth-dev-server.ts",
+    "dev:ngrok": "./scripts/start-ngrok.sh",
+    "dev:slack-setup": "./scripts/setup-slack-dev.sh",
     "build": "tsc && npm run copy-assets",
     "build:production": "NODE_ENV=production tsc --build tsconfig.json && npm run copy-assets",
     "copy-assets": "cp -r config/ dist/ && cp .env.example dist/",
@@ -93,8 +96,17 @@
     "setup:all": "npm run setup:integrations",
     "slack:dev": "npm run dev:slack",
     "slack:ngrok": "echo '🌐 Ejecuta: ngrok http 3000' && echo '📋 Luego actualiza las URLs en https://api.slack.com/apps'",
-    "slack:test": "node scripts/slack-test.js simple",
-    "slack:test:full": "node scripts/slack-test.js comprehensive",
+    "slack:verify": "./scripts/verify-slack-setup.sh",
+    "slack:demo": "echo '📖 Lee el archivo DEMO_NGROK_SLACK.md para instrucciones completas'",
+    "oauth:setup": "echo '📖 Lee el archivo SLACK_OAUTH_SETUP_COMPLETE.md para configuración OAuth'",
+    "oauth:verify": "echo '🔐 Verificando configuración OAuth...' && node -e \"console.log('Client ID:', process.env.SLACK_CLIENT_ID); console.log('Secret configured:', !!process.env.SLACK_CLIENT_SECRET);\"",
+    "oauth:ngrok": "bash scripts/verify-ngrok-oauth.sh",
+    "oauth:ngrok:verify": "node scripts/oauth-ngrok-verify.js",
+    "oauth:test": "npm run oauth:ngrok:verify && echo '🎯 OAuth listo para probar en: https://2bc16bb5b5dd.ngrok.io/slack/install'",
+    "oauth:start": "bash scripts/start-oauth-server.sh",
+    "ngrok:update": "bash scripts/ngrok-update-guide.sh",
+    "ngrok:get-url": "bash scripts/get-new-ngrok-url.sh",
+    "oauth:update-urls": "echo 'Uso: npm run oauth:update-urls -- https://nueva-url.ngrok-free.app'",
     "setup:vscode": "./scripts/setup-vscode-extensions.sh",
     "setup:phase1": "./scripts/setup-phase1-complete.sh",
     "clean:env": "./scripts/setup-clean-environment.sh",
